<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools">

	<androidx.appcompat.widget.LinearLayoutCompat
		android:layout_width="match_parent"
		android:layout_height="@dimen/nav_header_height"
		android:background="@drawable/side_nav_bar"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:theme="@style/ThemeOverlay.AppCompat.Dark"
		android:orientation="vertical"
		android:gravity="bottom">

		<androidx.appcompat.widget.AppCompatImageView
			android:layout_width="@dimen/navigation_drawer_image_width"
			android:layout_height="wrap_content"
			android:paddingTop="@dimen/nav_header_vertical_spacing"
			app:srcCompat="@drawable/ic_account_circle"
			android:contentDescription="@string/nav_header_desc"
			android:id="@+id/userImg"/>

		<androidx.appcompat.widget.AppCompatTextView
			android:visibility="visible"
			android:id="@+id/name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="@dimen/nav_header_vertical_spacing"
			tools:text="@string/user_name"
			android:textStyle="bold"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

		<androidx.appcompat.widget.AppCompatTextView
			android:visibility="visible"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			tools:text="@string/user_email"
			android:id="@+id/email"/>

	</androidx.appcompat.widget.LinearLayoutCompat>

</layout>
