<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>
		<variable name="model" type="cc.capsl.blog.models.LoginModel"/>
		<variable name="viewModel" type="cc.capsl.blog.viewmodels.LoginViewModel"/>
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:fitsSystemWindows="true"
		android:background="@drawable/side_nav_bar"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<com.google.android.material.card.MaterialCardView
			app:cardCornerRadius="8dp"
			app:cardElevation="16dp"
			app:layout_constraintBottom_toTopOf="parent"
			app:layout_constraintTop_toBottomOf="parent"
			app:layout_constraintLeft_toRightOf="parent"
			app:layout_constraintRight_toLeftOf="parent"
			app:layout_constraintWidth_percent=".8"
			android:layout_width="0dp"
			android:layout_height="wrap_content">

			<androidx.appcompat.widget.LinearLayoutCompat
				android:orientation="vertical"
				android:gravity="center"
				android:padding="16dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<androidx.appcompat.widget.AppCompatTextView
					android:layout_margin="8dp"
					android:textColor="@color/iconColor"
					android:textStyle="bold"
					android:textAppearance="?android:textAppearanceLarge"
					android:gravity="center"
					android:text="@string/app_name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/emailLayout"
					app:boxBackgroundColor="@android:color/transparent"
					android:layout_margin="8dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<com.google.android.material.textfield.TextInputEditText
						android:text="@{model.email}"
						android:id="@+id/email"
						android:inputType="textEmailAddress"
						android:hint="@string/hint_email"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>

				</com.google.android.material.textfield.TextInputLayout>

				<com.google.android.material.textfield.TextInputLayout
					android:layout_margin="8dp"
					app:boxBackgroundColor="@android:color/transparent"
					android:id="@+id/passwordLayout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<com.google.android.material.textfield.TextInputEditText
						android:text="@{model.password}"
						android:id="@+id/password"
						android:hint="@string/hint_pwd"
						android:inputType="textPassword"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>

				</com.google.android.material.textfield.TextInputLayout>

				<androidx.appcompat.widget.LinearLayoutCompat
					android:layout_marginTop="32dp"
					android:layout_marginBottom="32dp"
					android:weightSum="2"
					android:padding="8dp"
					android:gravity="center"
					android:orientation="horizontal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<com.google.android.material.button.MaterialButton
						android:id="@+id/skipBtn"
						android:textColor="@android:color/white"
						app:backgroundTint="@color/bgLightPurple"
						android:text="@string/btn_skip"
						android:layout_marginRight="5dp"
						android:layout_weight="1"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>

					<com.google.android.material.button.MaterialButton
						android:id="@+id/loginBtn"
						android:background="@color/iconColor"
						android:textColor="@android:color/white"
						android:text="@string/btn_login"
						android:layout_marginLeft="5dp"
						android:layout_weight="1"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>

				</androidx.appcompat.widget.LinearLayoutCompat>

				<com.google.android.material.button.MaterialButton
					app:backgroundTint="@android:color/transparent"
					android:textAllCaps="false"
					android:id="@+id/registerBtn"
					android:background="@android:color/transparent"
					android:text="@string/link_register"
					android:textColor="@color/iconColor"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

			</androidx.appcompat.widget.LinearLayoutCompat>

		</com.google.android.material.card.MaterialCardView>

	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>