<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>
		<variable
			name="viewModel"
			type="cc.capsl.blog.viewmodels.RegisterViewModel"/>
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:fitsSystemWindows="true"
		android:background="@drawable/side_nav_bar"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<com.google.android.material.card.MaterialCardView
			app:cardCornerRadius="10dp"
			app:cardElevation="10dp"
			app:layout_constraintTop_toBottomOf="parent"
			app:layout_constraintBottom_toTopOf="parent"
			app:layout_constraintRight_toLeftOf="parent"
			app:layout_constraintLeft_toRightOf="parent"
			android:layout_margin="16dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<androidx.appcompat.widget.LinearLayoutCompat
					android:id="@+id/titleTxt"
					android:gravity="center"
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<androidx.appcompat.widget.AppCompatTextView
						android:layout_alignParentTop="true"
						android:textStyle="bold"
						android:textColor="@color/iconColor"
						android:textAllCaps="true"
						android:textAppearance="?android:textAppearanceLarge"
						android:gravity="center"
						android:text="@string/title_register"
						android:padding="16dp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>

					<androidx.appcompat.widget.AppCompatImageButton
						android:visibility="visible"
						android:background="@android:color/transparent"
						android:clickable="true"
						android:scaleType="centerInside"
						android:src="@drawable/ic_add_photo_alternate"
						android:focusable="true"
						android:id="@+id/userPhoto"
						android:layout_width="100dp"
						android:layout_height="100dp"/>

					<androidx.appcompat.widget.AppCompatTextView
						android:clickable="true"
						android:focusable="true"
						android:visibility="visible"
						android:id="@+id/tapPhotoBtn"
						android:textColor="@color/iconColor"
						android:text="@string/btn_photo"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>

				</androidx.appcompat.widget.LinearLayoutCompat>

				<com.google.android.material.button.MaterialButton
					android:id="@+id/submitBtn"
					android:background="@color/iconColor"
					android:textColor="@android:color/white"
					android:text="@string/btn_submit"
					android:layout_centerHorizontal="true"
					android:layout_margin="16dp"
					android:layout_alignParentBottom="true"
					android:layout_width="150dp"
					android:layout_height="wrap_content"/>

				<androidx.core.widget.NestedScrollView
					android:layout_above="@+id/submitBtn"
					android:layout_below="@+id/titleTxt"
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<androidx.appcompat.widget.LinearLayoutCompat
						android:gravity="center"
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

						<com.google.android.material.textfield.TextInputLayout
							app:boxBackgroundColor="@android:color/transparent"
							android:id="@+id/emailLayout"
							android:layout_margin="8dp"
							android:layout_width="match_parent"
							android:layout_height="wrap_content">

							<com.google.android.material.textfield.TextInputEditText
								android:id="@+id/email"
								android:inputType="textEmailAddress"
								android:hint="@string/hint_email"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>

						</com.google.android.material.textfield.TextInputLayout>

						<com.google.android.material.textfield.TextInputLayout
							android:layout_margin="8dp"
							app:boxBackgroundColor="@android:color/transparent"
							android:id="@+id/pwdLayout"
							android:layout_width="match_parent"
							android:layout_height="wrap_content">

							<com.google.android.material.textfield.TextInputEditText
								android:hint="@string/hint_pwd"
								android:id="@+id/password"
								android:inputType="textPassword"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>

						</com.google.android.material.textfield.TextInputLayout>

						<com.google.android.material.textfield.TextInputLayout
							android:layout_margin="8dp"
							app:boxBackgroundColor="@android:color/transparent"
							android:id="@+id/confirmPwdLayout"
							android:layout_width="match_parent"
							android:layout_height="wrap_content">

							<com.google.android.material.textfield.TextInputEditText
								android:inputType="textPassword"
								android:id="@+id/confirmPassword"
								android:hint="@string/hint_conf_pwd"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>

						</com.google.android.material.textfield.TextInputLayout>

						<com.google.android.material.textfield.TextInputLayout
							android:layout_margin="8dp"
							app:boxBackgroundColor="@android:color/transparent"
							android:id="@+id/firstNameLayout"
							android:layout_width="match_parent"
							android:layout_height="wrap_content">

							<com.google.android.material.textfield.TextInputEditText
								android:hint="@string/hint_first_name"
								android:inputType="textAutoComplete"
								android:id="@+id/firstName"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>

						</com.google.android.material.textfield.TextInputLayout>

						<com.google.android.material.textfield.TextInputLayout
							android:layout_margin="8dp"
							app:boxBackgroundColor="@android:color/transparent"
							android:id="@+id/lastNameLayout"
							android:layout_width="match_parent"
							android:layout_height="wrap_content">

							<com.google.android.material.textfield.TextInputEditText
								android:hint="@string/hint_last_name"
								android:inputType="textAutoComplete"
								android:id="@+id/lastName"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>

						</com.google.android.material.textfield.TextInputLayout>

						<androidx.appcompat.widget.AppCompatEditText
							android:id="@+id/imageId"
							android:visibility="gone"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"/>

						<com.google.android.material.button.MaterialButton
							android:visibility="gone"
							android:layout_margin="10dp"
							android:id="@+id/uploadBtn"
							android:textColor="@android:color/white"
							android:background="@color/bgLightPurple"
							android:text="@string/btn_upload_photo"
							android:layout_width="150dp"
							android:layout_height="wrap_content"/>

					</androidx.appcompat.widget.LinearLayoutCompat>

				</androidx.core.widget.NestedScrollView>

			</RelativeLayout>

		</com.google.android.material.card.MaterialCardView>

	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>