<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:fitsSystemWindows="true"
		android:background="@drawable/side_nav_bar"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<com.google.android.material.card.MaterialCardView
			app:cardCornerRadius="10dp"
			app:cardElevation="10dp"
			app:layout_constraintTop_toBottomOf="parent"
			app:layout_constraintBottom_toTopOf="parent"
			app:layout_constraintRight_toLeftOf="parent"
			app:layout_constraintLeft_toRightOf="parent"
			android:layout_margin="16dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<androidx.appcompat.widget.LinearLayoutCompat
					android:background="?attr/selectableItemBackground"
					android:clickable="true"
					android:focusable="true"
					android:layout_alignParentTop="true"
					android:padding="5dp"
					android:layout_margin="5dp"
					android:id="@+id/photoLayout"
					android:layout_centerHorizontal="true"
					android:gravity="center"
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<androidx.appcompat.widget.AppCompatImageView
						android:background="@android:color/transparent"
						app:srcCompat="@drawable/ic_add_photo_alternate"
						android:focusable="true"
						android:id="@+id/userPhoto"
						android:layout_width="match_parent"
						android:layout_height="100dp"/>

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/tapPhotoBtn"
						android:textColor="@color/iconColor"
						android:text="@string/btn_photo"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>

				</androidx.appcompat.widget.LinearLayoutCompat>

				<com.google.android.material.textfield.TextInputLayout
					android:layout_below="@+id/photoLayout"
					app:boxBackgroundColor="@android:color/transparent"
					android:id="@+id/titleLayout"
					android:layout_margin="16dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<com.google.android.material.textfield.TextInputEditText
						android:textStyle="bold"
						android:textColor="@android:color/black"
						android:textAppearance="?android:textAppearanceLarge"
						android:id="@+id/title"
						android:gravity="center"
						android:inputType="textEmailAddress"
						android:hint="@string/hint_title"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>

				</com.google.android.material.textfield.TextInputLayout>

				<com.google.android.material.checkbox.MaterialCheckBox
					android:textStyle="italic"
					android:textColor="@color/iconColor"
					android:checked="false"
					android:layout_marginTop="5dp"
					android:id="@+id/isPrivate"
					android:layout_above="@+id/buttons"
					android:layout_centerHorizontal="true"
					app:useMaterialThemeColors="true"
					android:text="@string/mark_private"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<androidx.appcompat.widget.LinearLayoutCompat
					android:layout_marginLeft="16dp"
					android:layout_marginRight="16dp"
					android:id="@+id/buttons"
					android:weightSum="2"
					android:layout_alignParentBottom="true"
					android:orientation="horizontal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<com.google.android.material.button.MaterialButton
						app:backgroundTint="@color/bgLightPurple"
						android:layout_weight="1"
						android:layout_margin="16dp"
						android:layout_centerHorizontal="true"
						android:id="@+id/cancelBtn"
						android:text="@string/btn_cancel"
						android:layout_alignParentBottom="true"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>

					<com.google.android.material.button.MaterialButton
						android:layout_weight="1"
						android:layout_margin="16dp"
						android:layout_centerHorizontal="true"
						android:id="@+id/submitBtn"
						android:text="@string/btn_submit"
						android:layout_alignParentBottom="true"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>

				</androidx.appcompat.widget.LinearLayoutCompat>

				<com.google.android.material.card.MaterialCardView
					app:cardBackgroundColor="@color/lightGray"
					android:layout_marginLeft="16dp"
					android:layout_marginRight="16dp"
					android:layout_below="@id/titleLayout"
					android:layout_above="@+id/isPrivate"
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<androidx.appcompat.widget.AppCompatEditText
						android:background="@android:color/transparent"
						android:textAppearance="?android:textAppearanceSmall"
						android:scrollbars="vertical"
						android:scrollbarAlwaysDrawVerticalTrack="true"
						android:padding="8dp"
						android:id="@+id/content"
						android:gravity="left|top"
						android:hint="@string/hint_content"
						android:layout_width="match_parent"
						android:layout_height="match_parent"/>

				</com.google.android.material.card.MaterialCardView>

			</RelativeLayout>

		</com.google.android.material.card.MaterialCardView>

	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>